update esp32 def

--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Signal Input/Output
 includes=EncoderButton.h
 depends=Encoder, Bounce2
 url=https://github.com/Stutchbury/EncoderButton
-architectures=*
+architectures=avr,esp32,megaavr
